@@ -325,7 +325,7 @@ commandMap = {
         "mediacheck": mediacheck.FC4_MediaCheck,
         "monitor": monitor.FC6_Monitor,
         "multipath": multipath.FC6_MultiPath,
-        "network": network.FC6_Network,
+        "network": network.F8_Network,
         "nfs": method.FC6_Method,
         "part": partition.FC4_Partition,
         "partition": partition.FC4_Partition,
@@ -573,7 +573,7 @@ dataMap = {
         "IscsiData": iscsi.FC6_IscsiData,
         "LogVolData": logvol.FC4_LogVolData,
         "MultiPathData": multipath.FC6_MultiPathData,
-        "NetworkData": network.FC6_NetworkData,
+        "NetworkData": network.F8_NetworkData,
         "PartData": partition.FC4_PartData,
         "RaidData": raid.F7_RaidData,
         "RepoData": repo.F8_RepoData,
